Apply Tape Fixes
VMFPLC2 needs fixes as does AWSTape to accommodate LEGAL file naming conventions.

--- a/.gitignore
+++ b/.gitignore
@@ -96,11 +96,23 @@ autoconf/compile
 /msvc.AMD64.map
 /msvc.AMD64.obj
 /msvc.AMD64.pdb
+/msvc.sz.AMD64.bin
+/msvc.sz.AMD64.cod
+/msvc.sz.AMD64.map
+/msvc.sz.AMD64.obj
+/msvc.sz.AMD64.pdb
 /msvc.dllmod.bin
 /msvc.dllmod.cod
 /msvc.dllmod.map
 /msvc.dllmod.obj
 /msvc.dllmod.pdb
+/msvc.debug.dllmod.obj/*.cache
+/msvc.sz.debug.AMD64.map
+/msvc.sz.debug.AMD64.obj
+msvc.debug.dllmod.bin/BuildLog-Win32-Debug.txt
+*.map
+*.obj
+
 /stamp-h
 /stamp-h.in
 /stamp-h1
